--- a/ravioli.html
+++ b/ravioli.html
@@ -14,19 +14,22 @@
         <li><a href="spaghetti">spaghetti</a></li>
 
  </ul>
- <img src="images/eieren met spek.jpg">
+ <img src="images/ravioli.jpg">
  <h2>Ingedrienten</h2>
  <ul>
-    <li>3 snede gezouten spek</li>
-    <li>3 eieren</li>
-    <li>bakboter</li>
+    <li>1 ei</li>
+    <li>Boter</li>
+    <li>100 meel</li>
+    <li>ravioli</li>
+    <li>olijfolie</li>
+    <li>Ricotta</li>
  </ul>
 <h2>Bereiding</h1>
     <ol>
-    <li>Breek de eieren in een kommetje, zorg ervoor dat de dooier heel blijft.</li>
-    <li>Smelt een klein klontje melkerijboter of doe wat olie om te bakken in de pan (het spek zal ook vet afgeven), warm goed op en leg er de sneden spek naast elkaar in.</li>
-    <li>Giet het overtollige vet uit de pan, zet het vuur iets lager, giet de eieren over het spek, maal er wat peper over en laat de omeletten verder gaar bakken.</li>
-    
+    <li>Maak pastadeeg zoals gebruikelijk</li>
+    <li>Doe alles wat je in de ravioli wilt doen in een blender of staafmixer-bakje en pureer.</li>
+    <li>Inmiddels heeft het deeg gerust in de koelkast en kan je het gaan uitrollen.</li>
+    <li>Ravioli vullen</li>
     </ol>
 
 </body>
