--- a/ravioli.html
+++ b/ravioli.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Eieren met spek</h1>
     <ul>
-        <li><a href="spek met eieren.html">Spek met eieren</a></li>
-        <li><a href="ravioli">ravioli</a></li>
-        <li><a href="spaghetti">spaghetti</a></li>
+        <li><a href="spek-met-eieren.html">Spek met eieren</a></li>
+        <li><a href="ravioli.html">ravioli</a></li>
+        <li><a href="spaghetti.html">spaghetti</a></li>
 
  </ul>
  <img src="images/ravioli.jpg">
