--- a/spaghetti.html
+++ b/spaghetti.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recepten - eieren met spek</title>
+    <title>Recepten - spaghetti</title>
 </head>
 <body>
     <h1>Eieren met spek</h1>
     <ul>
         <li><a href="spek-met-eieren.html">Spek met eieren</a></li>
-        <li><a href="ravioli">ravioli</a></li>
-        <li><a href="spaghetti">spaghetti</a></li>
+        <li><a href="ravioli.html">ravioli</a></li>
+        <li><a href="spaghetti.html">spaghetti</a></li>
 
  </ul>
  <img src="images/Spaghetti.jpg">
