--- a/spek-met-eieren.html
+++ b/spek-met-eieren.html
@@ -7,11 +7,11 @@
     <title>Recepten - eieren met spek</title>
 </head>
 <body>
-    <h1>Eieren met spek</h1>
+    <h1>spek met eieren</h1>
     <ul>
-        <li><a href="spek met eieren.html">Spek met eieren</a></li>
-        <li><a href="ravioli">ravioli</a></li>
-        <li><a href="spaghetti">spaghetti</a></li>
+        <li><a href="spek-met-eieren.html">Spek met eieren</a></li>
+        <li><a href="ravioli.html">ravioli</a></li>
+        <li><a href="spaghetti.html">spaghetti</a></li>
 
  </ul>
  <img src="images/eieren met spek.jpg">
@@ -26,7 +26,7 @@
     <li>Breek de eieren in een kommetje, zorg ervoor dat de dooier heel blijft.</li>
     <li>Smelt een klein klontje melkerijboter of doe wat olie om te bakken in de pan (het spek zal ook vet afgeven), warm goed op en leg er de sneden spek naast elkaar in.</li>
     <li>Giet het overtollige vet uit de pan, zet het vuur iets lager, giet de eieren over het spek, maal er wat peper over en laat de omeletten verder gaar bakken.</li>
-    
+
     </ol>
 
 </body>
